# ELT-pipeline---Real-time-Crypto-Prices

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  UPLOAD_TO_GITHUB.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
notebooks/: explore_crypto_prices.ipynb
scripts/: generate_readme_figures.py
src/: __init__.py  config.py
src/app/: __init__.py  dashboard.py
src/ingestion/: __init__.py  main.py
src/transformation/: __init__.py  main.py
src/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py  test_data.py  test_ingestion.py  test_transformation.py
